# drmario64

./: .clang-format  .clang-tidy  .gitignore  2022-12-20-15-29-35_all_matches.txt  LICENSE  Makefile  README.md  asdf.c  cn_drmario64.yaml  ctx.c.m2c  decomp.yaml  diff_settings.py  drmario64.cn.md5  drmario64.cn.yaml  drmario64.gw.md5  drmario64.gw.yaml  drmario64.md5  drmario64.us.md5  drmario64.us.yaml  drmario64.usa.md5  drmario64.usa.yaml  drmario64.yaml  drmario64_uncompressed.cn.md5  drmario64_uncompressed.gw.md5  drmario64_uncompressed.md5  drmario64_uncompressed.us.md5  drmario64_uncompressed.usa.md5  flib_output.txt  pyproject.toml  reloc_addrs.txt  reloc_addrs.usa.txt  requirements.txt  slinky.cn.yaml  slinky.gw.yaml  slinky.us.yaml  slinky.yaml
config/: slinky.yaml
docs/: index.html
include/: 000280.h  020D10.h  028820.h  055C40.h  065080.h  066080.h  066580.h  066840.h  ai.h  aif.h  aiset.h  alignment.h  attributes.h  bg_tasks.h  boot_data.h  boot_functions.h  boot_main.h  boot_variables.h  buffers.h  calc.h  calcsub.h  char_anime.h  color.h  debug_menu.h  defines.h  dm_game_main.h  dm_main_cnt.h  dm_manual_main.h  dm_thread.h  dm_title_main.h  dm_virus_init.h  dma_table.h  dmadata.h  font.h  game_etc.h  gamemap.h  gateway.h  graphbin.h  graphic.h  gzip.h  (+32 more)
lib/: Makefile
linker_scripts/: common_undef_syms.ld  junk_symbols.txt  libultra_symbols.ld  subseg_05.ld  symbol_addrs.txt  symbol_addrs_boot.txt  symbol_addrs_buffers.txt  symbol_addrs_main_segment.txt  undefined_syms.ld
relocs/: reloc_addrs.cn.txt  reloc_addrs.gw.txt  reloc_addrs.us.txt
(+398 files in other folders)
