[project]
name = "drmario64"
version = "0.1.0"
description = "Tooling for the Dr. Mario 64 decomp project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mapfile-parser>=2.9.0,<3.0.0",
    "ipl3checksum>=1.0.0,<2.0.0",
    "splat64[mips]>=0.37.0,<1.0.0",
    "crunch64>=0.5.0,<1.0.0",

    # for m2c
    "pycparser",

    # for diff.py
    "colorama",
    "watchdog",
    "levenshtein",
    "cxxfilt",
]

[tool.uv]
package = false
